--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-adsense-account" content="ca-pub-4074708695533793">
     <link rel="shortcut icon" href="hornmiup.ico" type="image/x-icon">
     <title>Hornmiup</title>
     <style>
